--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,96 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+
 body {
+  overflow-y: visible !important; 
+  overflow-x: hidden; 
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Segoe UI', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f5f5f5;
 }
+
+h2, p, span { margin: 0; }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html, body, #root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#main-container {
+  min-height: 100%;
+  /* background-color: rgb(170, 170, 170); */
+  /* border: 1px solid rgb(170, 170, 170); */
+  max-width: 0 -10px;
+  padding: 0;
+}
+
+#main-container img {
+  display: block;
+  width: 100%;
+  height: 200px;
+}
+
+.card {
+  background-color: aqua;
+}
+
+.logo {
+  object-fit: contain;
+}
+
+.match_string {
+  background-color: #ff9632;
+}
+
+.top_bar {
+  display: flex;
+  margin-bottom: 16px;
+  justify-content: space-between;
+}
+
+.add_button {
+  height: 40;
+  width: 40px;
+  background-color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  border: 1px solid lightgray;
+}
+
+.add_button svg {
+  color: rgba(0, 0, 0, 0.54);
+  transition: transform .3s ease-in-out;
+} 
+
+.add_button:hover svg {
+  transform: rotate(180deg);
+} 
+
+#search_loader {
+  position: absolute;
+  right: 7px;
+  top: 7px;
+  width: 26px;
+  height: 26px;
+  box-sizing: border-box;
+  border: 2px solid rgb(228, 228, 240);
+  border-top-color: black;
+  border-radius: 13px;
+  animation:spin 1s linear infinite;
+}
+
+@keyframes spin { 100% { transform:rotate(360deg); } }
